Parrafos agregados al index

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>Página 1 GIT</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, animi dicta atque sit beatae deserunt, impedit, unde ratione ipsam perspiciatis minima? Accusamus mollitia beatae consequatur voluptates eius porro perferendis. Neque?</p>
+    <h2>Subtítulo</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt deleniti repellat autem ducimus dignissimos hic corrupti pariatur culpa nisi ad quisquam perferendis, fugiat obcaecati! Quibusdam atque ipsam delectus provident dolore.</p>
 </body>
 </html>
