agregadas nuevas ramas, paginas y enlaces

--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt deleniti repellat autem ducimus dignissimos hic corrupti pariatur culpa nisi ad quisquam perferendis, fugiat obcaecati! Quibusdam atque ipsam delectus provident dolore.</p>
     <p>Párrafo main</p>
     <p>Párrafo rama 1</p>
+    <a href="branch_1.html">Ir a Página 1</a>
+    <a href="branch_2.html"> </a>
 </body>
 </html>
