--- a/branch_1.html
+++ b/branch_1.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Página 1 Rama 1</h1>
     <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione inventore nesciunt, odit natus et ullam rerum iure quaerat odio maxime libero nostrum laborum, facilis, modi enim consequuntur dignissimos. Nisi, ab?</P>
+    <a href="index.html">Ir a Página Principal</a>
 </body>
 </html>
